[project]
authors = [{name = "RabbitQ", email = "deepthough@postech.ac.kr"}]
dependencies = []
name = "UsePixi"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
#usepixi = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
cuda = ["cuda"]
default = ["cuda"]

[tool.pixi.feature.cuda.system-requirements]
cuda = "12.0"

[tool.pixi.feature.cuda.dependencies]
python = "==3.11"

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
